# owndesign

./: .gitignore  .oxfmtrc.jsonc  .oxlintrc.jsonc  AGENTS.md  CONTEXT.md  README.en.md  README.md  components.json  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  versions.json  vitest.setup.ts
.codex/environments/: environment.toml
.github/workflows/: release-cli.yml
.superpowers/sdd/: task-2-report.md  task-3-report.md  task-5-report.md
apps/desktop/: eslint.config.mjs  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/web/: eslint.config.mjs  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
docs/adr/: 0001-local-first-project-shaped-storage.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
scripts/: tsconfig.json  version.ts
src/app/: globals.css  layout.tsx  page.test.tsx  page.tsx
src/components/: chat-shell.test.tsx  chat-shell.tsx  control-bar.test.tsx  control-bar.tsx  frontend-capability-bridge.test.tsx  frontend-capability-bridge.tsx  initial-setup-guide.tsx  message-composer.tsx  preview-empty-state.tsx  project-preview-frame.test.tsx  project-preview-frame.tsx  settings-control.test.tsx  settings-control.tsx  streaming-conversation-panel.test.tsx  streaming-conversation-panel.tsx  workspace-shell.tsx
src/lib/: chat-messages.test.ts  chat-messages.ts  conversation-service.test.ts  design-page-agent.ts  (+15 more)
(+96 files in other folders)
