[package]
name = "owndesign-desktop"
version = "0.1.0"
description = "OwnDesign desktop app"
authors = ["OwnDesign"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "owndesign_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
tauri = { version = "2.11.2", features = [] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-shell = "2.3.5"
zip = { version = "2.4.2", default-features = false, features = ["deflate"] }
